# interfere

./: .gitignore  Makefile  README.md  ddp_train.py  eval.py  interp_run.py  pyproject.toml  run.txt  setup.cfg  train.py
assets/explorations/20250830_083136/: probe_sweep_summary.json
cfg/exp/: life24.yaml  life32.yaml  life32_t3.yaml  life40.yaml  life_smoke.yaml
cfg/interp/: default.yaml
cfg/model/: base.yaml
cfg/train/: fast.yaml
explorations/: README.md  __init__.py  ablations.py  attn_contrib_vector.py  attn_maps.py  embed_scatter.py  physics_bits.py  probes.py  quick_eval.py  rule_vectors.py  utils.py
outputs/2025-08-29/03-36-21/.hydra/: config.yaml  hydra.yaml
outputs/2025-08-29/03-36-23/.hydra/: hydra.yaml
outputs/2025-08-29/04-15-52/.hydra/: hydra.yaml
outputs/2025-08-29/04-15-53/.hydra/: hydra.yaml
outputs/2025-08-29/04-15-54/.hydra/: config.yaml  hydra.yaml
outputs/2025-08-29/04-16-15/.hydra/: hydra.yaml
outputs/2025-08-29/04-16-17/.hydra/: hydra.yaml  overrides.yaml
outputs/2025-08-29/04-27-25/.hydra/: hydra.yaml
outputs/2025-08-29/04-27-27/.hydra/: hydra.yaml
outputs/2025-08-29/04-27-28/.hydra/: config.yaml  hydra.yaml
outputs/2025-08-29/04-36-46/.hydra/: hydra.yaml
runs/: summary.md
src/data/: rules.py  stream.py
src/interp/: ask.py  patching.py  probes.py  sae.py
src/model/: film.py  hooked_life.py  rope2d.py
src/train/: loop.py  metrics.py
src/viz/: plots.py  rollout.py
tests/: test_model_forward.py  test_rope2d.py  test_rules.py  test_stream.py  test_tokenization.py
(+23 files in other folders)
