[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "life-gpt"
version = "0.0.1"
description = "Rule-conditioned Life-GPT with TransformerLens and mech-interp utilities"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Proprietary"}
authors = [{ name = "Life-GPT Team" }]
dependencies = [
  "transformer-lens>=1.2",
  "sae-lens>=0.2",
  "torch>=2.1",
  "einops>=0.7",
  "hydra-core>=1.3",
  "omegaconf>=2.3",
  "wandb>=0.16",
  "tqdm>=4.66",
  "pytest>=7.4",
]

[tool.setuptools]
package-dir = {"" = "."}
packages = []

